Implement Book, Author, and Genre entities with DTOs, repositories, and a controller for book retrieval